--- a/content/imprint/index.html
+++ b/content/imprint/index.html
@@ -17,7 +17,7 @@ draft: true
 </p>
 <p>
     <strong>Umsatzsteuer-ID: </strong><br />Umsatzsteuer-Identifikationsnummer nach §27a
-    Umsatzsteuergesetz:<br />beantragt
+    Umsatzsteuergesetz:<br />DE328856670
 </p>
 <p>
     <strong>Verantwortlich für den Inhalt</strong> (gem. § 55 Abs. 2 RStV):<br />Andreas Kluth<br />
